# denali

./: .gitignore  LICENSE  README.org  cabal.project  configuration.nix  demo.nix  installer.nix  release.nix  run.sh
installer/: Main.hs  default.nix  installer.cabal  webkitgtk.nix
