name: installer
version: 0.1.0.0
build-type: Simple
cabal-version: >=1.18

executable installer
  hs-source-dirs: ./
  main-is: Main.hs
  ghc-options: -threaded
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends: base
               , containers
               , jsaddle-webkit2gtk
               , optparse-applicative
               , reflex
               , reflex-dom
               , text

source-repository head
  type: git
  location: https://github.com/matthewbauer/denali
